kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx-with-node-affinity
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx-with-node-affinity
  template:
    metadata:
      labels:
        app: nginx-with-node-affinity
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx-with-node-affinity
        image: nginx
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: nginx-conf
          mountPath: /etc/nginx
          readOnly: true
        - name: my-app-conf
          mountPath: /homework/conf
        lifecycle:
          preStop:
            exec:   
              command: ["/bin/sh","-c","rm -f /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: my-pvc
      - name: my-app-conf
        configMap:
          name: my-app-parameters
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
